cleanup get API